プログラムを書く用意まで。

--- a/html/2_seccond.html
+++ b/html/2_seccond.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Step 01</title>
+    <title>Step 02 Click Counter</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Step 01 </h1>
+    <h1>Step 02 Click Counter</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -26,8 +26,15 @@
     <script src="../js/bootstrap.min.js"></script>
     <script type='text/javascript' src='../js/knockout-3.3.0.js'></script>
     <script type='text/javascript' src='../js/self.js'></script>
-
-    <!-- TODO incriment ! -->
     
+    <div>クリック回数 <span data-bind='text: numberOfClicks'>&nbsp;</span> 回</div>
+  
+    <button data-bind='click: registerClick, disable: hasClickedTooManyTimes'>クリックしてね</button>
+  
+    <div data-bind='visible: hasClickedTooManyTimes'>
+        クリックしすぎです！指がすり減らないうちにやめて下さい ヽ(^o^;)丿
+        <button data-bind='click: resetClicks'>リセット</button>
+    </div> 
+
   </body>
 </html>
