--- a/html/1_first.html
+++ b/html/1_first.html
@@ -24,6 +24,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
+    <script type='text/javascript' src='../js/knockout-3.3.0.js'></script>
+    <script type='text/javascript' src='../js/self.js'></script>
+
     
     <div>クリック回数 <span data-bind='text: numberOfClicks'>&nbsp;</span> 回</div>
   
