--- a/html/1_first.html
+++ b/html/1_first.html
@@ -16,26 +16,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <h1>Step 01 </h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
     <script type='text/javascript' src='../js/knockout-3.3.0.js'></script>
-    <script type='text/javascript' src='../js/self.js'></script>
+    <script type='text/javascript' src='../js/1_first.js'></script>
 
-    
-    <div>クリック回数 <span data-bind='text: numberOfClicks'>&nbsp;</span> 回</div>
-  
-    <button data-bind='click: registerClick, disable: hasClickedTooManyTimes'>クリックしてね</button>
-  
-    <div data-bind='visible: hasClickedTooManyTimes'>
-        クリックしすぎです！指がすり減らないうちにやめて下さい ヽ(^o^;)丿
-        <button data-bind='click: resetClicks'>リセット</button>
-    </div> 
+  </head>
+  <body>
+    <h1>Step 01 Hello World !</h1>
+
+    <p>ファーストネーム: <input data-bind="value: firstName" /></p>
+    <p>ラストネーム: <input data-bind="value: lastName" /></p>
+    <h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
+
+
 
   </body>
 </html>
