--- a/html/1_first.html
+++ b/html/1_first.html
@@ -8,7 +8,7 @@
     <title>Step 01</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,11 +17,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script type='text/javascript' src="../js/bootstrap.min.js"></script>
     <script type='text/javascript' src='../js/knockout-3.3.0.js'></script>
+    <script type='text/javascript' src='../js/common.js'></script>
     <script type='text/javascript' src='../js/1_first.js'></script>
 
   </head>
@@ -30,9 +28,8 @@
 
     <p>ファーストネーム: <input data-bind="value: firstName" /></p>
     <p>ラストネーム: <input data-bind="value: lastName" /></p>
+    <hr/>
     <h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
-
-
 
   </body>
 </html>
