課題ロクを追加。

--- a/html/6_collection_reflect.html
+++ b/html/6_collection_reflect.html
@@ -25,7 +25,9 @@
   <body>
     <h1>Step 06 Collection sample</h1>
 
-
+    <div>First name: <span data-bind="text: firstName"></span></div>
+    <div>Last name: <span data-bind="text: lastName"></span></div>
+    <div class="heading">Hello, <input data-bind="textInput: fullName"/></div>
        
     <script type='text/javascript' src='../js/6_collection_reflect.js'></script>
 
