JQueryのライブラリを参照するよう追加。

--- a/html/8_animation.html
+++ b/html/8_animation.html
@@ -17,6 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type='text/javascript' src="../js/bootstrap.min.js"></script>
     <script type='text/javascript' src='../js/knockout-3.3.0.js'></script>
     <script type='text/javascript' src='../js/common.js'></script>
