KnockoutをJSで書いていたものをTypeScriptへと変換。

--- a/html/1_first.html
+++ b/html/1_first.html
@@ -30,7 +30,7 @@
     <hr/>
     <h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
 
-    <script type='text/javascript' src='../js/1_first.js'></script>
+    <script type='text/javascript' src='../ts2js/1_first.js'></script>
 
   </body>
 </html>
