サンプル２のHTMLをTS側に向け、そのTSはテンプレまで配置。

--- a/html/2_clickcounter.html
+++ b/html/2_clickcounter.html
@@ -36,7 +36,7 @@
 
     <div>クリック回数(水増し) <span data-bind='text: getMizumashi'>&nbsp;</span> 回</div>
     
-    <script type='text/javascript' src='../js/2_clickcounter.js'></script>
+    <script type='text/javascript' src='../ts2js/2_clickcounter.js'></script>
 
   </body>
 </html>
