課題３のHTMLのコミットし忘れ。デバッグ済み。

--- a/html/3_simplelist.html
+++ b/html/3_simplelist.html
@@ -34,7 +34,7 @@
         <select multiple="multiple" width="50" data-bind="options: items"> </select>
     </form>
        
-    <script type='text/javascript' src='../js/3_simplelist.js'></script>
+    <script type='text/javascript' src='../ts2js/3_simplelist.js'></script>
 
   </body>
 </html>
