課題４のHTML側をTS側に繋ぎ変え。デバッグ了。

--- a/html/4_simplelist_great.html
+++ b/html/4_simplelist_great.html
@@ -38,7 +38,7 @@
         <button data-bind="click: sortItems, enable: allItems().length > 1">ソート</button>
     </div>
        
-    <script type='text/javascript' src='../js/4_simplelist_great.js'></script>
+    <script type='text/javascript' src='../ts2js/4_simplelist_great.js'></script>
 
   </body>
 </html>
