課題５のHTMLとTSで入れる

--- a/html/5_form_items.html
+++ b/html/5_form_items.html
@@ -95,7 +95,7 @@
         </tr>
     </table>
        
-    <script type='text/javascript' src='../js/5_form_items.js'></script>
+    <script type='text/javascript' src='../ts2js/5_form_items.js'></script>
 
   </body>
 </html>
