--- a/html/7_paging_list.html
+++ b/html/7_paging_list.html
@@ -41,7 +41,7 @@
         最初のページへ移動
     </button>
 
-    <script type='text/javascript' src='../js/7_paging_list.js'></script>
+    <script type='text/javascript' src='../ts2js/7_paging_list.js'></script>
 
   </body>
 </html>
