TypeScript側へ向ける。

--- a/html/8_animation.html
+++ b/html/8_animation.html
@@ -51,7 +51,7 @@
         <button data-bind='click: addPlanet.bind($data, "gasgiant")'>巨大ガス惑星を追加</button>
     </p>    
 
-    <script type='text/javascript' src='../js/8_animation.js'></script>
+    <script type='text/javascript' src='../ts2js/8_animation.js'></script>
 
   </body>
 </html>
