TS側で生成されたJSに振り返る。

--- a/html/10_addressbook.html
+++ b/html/10_addressbook.html
@@ -67,7 +67,7 @@
     
     <textarea data-bind='value: lastSavedJson' rows='5' cols='60' disabled='disabled'> </textarea>
 
-    <script type='text/javascript' src='../js/10_addressbook.js'></script>
+    <script type='text/javascript' src='../ts2js/10_addressbook.js'></script>
 
   </body>
 </html>
