TypeScript化。とりあえずは動くまで。

--- a/html/11_gtideditor.html
+++ b/html/11_gtideditor.html
@@ -51,7 +51,7 @@
         <button data-bind='enable: gifts().length > 0' type='submit'>登録</button>
     </form>
 
-    <script type='text/javascript' src='../js/11_gtideditor.js'></script>
+    <script type='text/javascript' src='../ts2js/11_gtideditor.js'></script>
 
   </body>
 </html>
