--- a/html/12_cart.html
+++ b/html/12_cart.html
@@ -24,9 +24,6 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 
-
-    <script src="../resources/sampleProductCategories.js" type="text/javascript"></script>
-
   </head>
   <body>
     <h1>Step 12</h1>
@@ -71,6 +68,7 @@
     <button data-bind='click: addLine'>製品を追加</button>
     <button data-bind='click: save'>注文</button>
 
+    <script type="text/javascript" src="../resources/sampleProductCategories.js"></script>
     <script type='text/javascript' src='../js/12_cart.js'></script>
 
   </body>
