--- a/html/12_cart.html
+++ b/html/12_cart.html
@@ -69,7 +69,7 @@
     <button data-bind='click: save'>注文</button>
 
     <script type="text/javascript" src="../resources/sampleProductCategories.js"></script>
-    <script type='text/javascript' src='../js/12_cart.js'></script>
+    <script type='text/javascript' src='../ts2js/12_cart.js'></script>
 
   </body>
 </html>
