TSとりあえず書いたまで。動かすのはまだ。

--- a/html/13_twitterclient.html
+++ b/html/13_twitterclient.html
@@ -66,7 +66,7 @@
     </div>
 
     <script type='text/javascript' src='../resources/twitterApi.js?v=1.0'> </script>
-    <script type='text/javascript' src='../js/13_twitterclient.js'></script>
+    <script type='text/javascript' src='../ts2js/13_twitterclient.js'></script>
 
   </body>
 </html>
